k8s/base/booking-api.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: booking-api
  namespace: booking-dev
  labels:
    app: booking-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: booking-api

  template:
    metadata:
      labels:
        app: booking-api

    spec:
      containers:
        - name: booking-api
          image: kube-lab/booking-api:0.1.0

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
