k8s/base/booking-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-frontend
  namespace: booking-dev
  labels:
    app: booking-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-frontend
  template:
    metadata:
      labels:
        app: booking-frontend
    spec:
      containers:
        - name: booking-frontend
          image: kube-lab/frontend:0.1.0
          ports:
            - containerPort: 8080
