k8s/base/booking-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-api
spec:
  type: ClusterIP
  selector:
    app: booking-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
