k8s/base/booking-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-frontend
  namespace: booking-dev
spec:
  type: ClusterIP
  selector:
    app: booking-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
