k8s/base/booking-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booking-route
  namespace: booking-dev
spec:
  parentRefs:
    - name: booking-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: booking-api
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: booking-frontend
          port: 8080
